css edit + logo

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,9 +1,3 @@
-.imageElement{
-  border-radius: 5;
-}
-.figure{
-  opacity: 0;
-}
-.carouselGaleryCursor{
-  transform: translate(-35px, 0px);
+.imagenElement--banner{
+  border-radius: 20px;
 }
