--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,3 +1,10 @@
-.imagenElement--banner{
-  border-radius: 20px;
+
+
+.imageElement{
+  border-radius: 15px;
 }
+ .container{
+  background-color: #7e9db9;
+
+}  
+
